// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/multiple-labeled-controls.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/multiple-labeled-controls.md inline validation: incorrect-both 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "<label> is associated with multiple controls",
        "offset": 1,
        "ruleId": "multiple-labeled-controls",
        "ruleUrl": "https://html-validate.org/rules/multiple-labeled-controls.html",
        "selector": "label",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<label for="bar">
  <input type="text" id="foo">
</label>
<input type="text" id="bar">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/multiple-labeled-controls.md inline validation: incorrect-multiple 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "<label> is associated with multiple controls",
        "offset": 1,
        "ruleId": "multiple-labeled-controls",
        "ruleUrl": "https://html-validate.org/rules/multiple-labeled-controls.html",
        "selector": "label",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<label>
  <input type="text">
  <input type="text">
</label>",
    "warningCount": 0,
  },
]
`;
